# well-logs

./: .gitignore  Dockerfile  Makefile  lambda_function.py  pyproject.toml  requirements-dev.txt
.github/workflows/: basic-test.yml  ci.yml  deploy.yml
configs/: pipeline.yaml
tests/: test_database.py  test_hash_log.py
wells/: database.py
