[tool.poetry]
name = "wells"
version = "0.1.0"
description = ""
authors = ["Don Fox <don@thedataincubator.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
imagehash = "4.3.0"
boto3 = "1.38.30"


[tool.poetry.group.dev.dependencies]
pytest = "7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
